--- a/aws_infrastructure/package.json
+++ b/aws_infrastructure/package.json
@@ -4,8 +4,9 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/pulumi": "^3.0.0",
         "@pulumi/aws": "^5.0.0",
-        "@pulumi/awsx": "^0.40.0"
+        "@pulumi/aws-apigateway": "^0.0.6",
+        "@pulumi/awsx": "^0.40.0",
+        "@pulumi/pulumi": "^3.0.0"
     }
 }
