--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   build:
     docker: 
-      - image: cimg/node:18.0.0
+      - image: "cimg/node:18.0.0"
       - working_directory: ~/aws_infrastructure
       executor:
         name: node/default
