--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,23 +5,18 @@ orbs:
 jobs:
   build:
     docker: 
-      - image: "cimg/node:18.0.0"
-      - working_directory: ~/aws_infrastructure
-      executor:
-        name: node/default
-        tag: '18.0'
-      steps:
-        - checkout
-        - build
-        - pulumi/login:
-          version: 16.0.2
-            access-token: 'pul-f4edae887f207ef0c10d3e60ebaef119a53b8ac0'
-        - pulumi/stack_init:
-            stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
-        - pulumi/update:
-            stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
-        - pulumi/stack_output:
-            stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
+      - image: cimg/node:16.15.0
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - pulumi/login:
+          access-token: 'pul-f4edae887f207ef0c10d3e60ebaef119a53b8ac0'
+      - pulumi/stack_init:
+          stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
+      - pulumi/update:
+          stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
+      - pulumi/stack_output:
+          stack: 'pipeline/test-pr_${CIRCLE_BUILD_NUM}'
   deploy:
     executor: serverless-framework/default
     steps:
