--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs: 
   serverless-framework: circleci/serverless-framework@2.0.0
   pulumi: pulumi/pulumi@2.1.0
+  aws-cli: circleci/aws-cli@3.1.1
 jobs:
   build:
     docker: 
@@ -21,6 +22,8 @@ jobs:
           stack: 'dev'
       - pulumi/stack_output:
           stack: 'dev'
+          property_name: "dev_config"
+          env_var: "dev"
   deploy:
     executor: serverless-framework/default
     steps:
