--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker: 
       - image: cimg/node:16.15.0
-    working_directory: ./aws_infrastructure
+    working_directory: ~/Data-Ingestion-Project/aws_infrastructure
     steps:
       - checkout
       - pulumi/login:
