--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,17 @@ jobs:
   build:
     docker: 
       - image: cimg/node:16.15.0
-    working_directory: ~/Data-Ingestion-Project/aws_infrastructure
+    working_directory: ~/repo/
+    
     steps:
       - checkout
       - pulumi/login:
           access-token: 'pul-f4edae887f207ef0c10d3e60ebaef119a53b8ac0'
-      - run:
-          command: |
-              npm install
       - pulumi/stack_init:
           stack: 'dev'
       - pulumi/update:
           stack: 'dev'
+          working_directory: ~/Data-Ingestion-Project/aws_infrastructure
       - pulumi/stack_output:
           stack: 'dev'
           property_name: "dev_config"
