--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,13 @@ jobs:
       - pulumi/login:
           access-token: 'pul-f4edae887f207ef0c10d3e60ebaef119a53b8ac0'
       - pulumi/stack_init:
-          stack: 'dev'
+          stack: 'aeCorp/dev'
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
       - pulumi/update:
-          stack: 'dev'
+          stack: 'aeCorp/dev'
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
       - pulumi/stack_output:
-          stack: 'dev'
+          stack: 'aeCorp/dev'
           property_name: "dev_config"
           env_var: "dev"
   deploy:
