--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker: 
       - image: cimg/node:16.15.0
-    working_directory: ~/Data-Ingestion-Project/
+    working_directory: ~/Data-Ingestion-Project
     
     steps:
       - checkout
@@ -16,7 +16,7 @@ jobs:
       - pulumi/stack_init:
           stack: 'aeCorp/dev'
       - pulumi/update:
-          secrets_provider: 'awskms'
+          secrets_provider: awskms://alias/circleCI_pipeline_credentials?region=ca-central-1
           stack: 'aeCorp/dev'
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
       - pulumi/stack_output:
