--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,14 +14,14 @@ jobs:
       - pulumi/login:
           access-token: 'pul-f4edae887f207ef0c10d3e60ebaef119a53b8ac0'
       - pulumi/stack_init:
-          stack: 'aeCorp/dev'
+          stack: 'dev'
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
           secrets_provider: awskms://alias/circleCI_pipeline_credentials?region=ca-central-1
       - pulumi/update:
-          stack: 'aeCorp/dev'
+          stack: 'dev'
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
       - pulumi/stack_output:
-          stack: 'aeCorp/dev'
+          stack: 'dev'
           property_name: "dev_config"
           env_var: "dev"
   deploy:
