Added new project env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,11 @@ jobs:
       - checkout
       - pulumi/login:
           access-token: $pulumi_access_token
+      - run: export AWS_ACCESS_KEY_ID=$accessId && export AWS_SECRET_ACCESS_KEY=$secret
+
       - pulumi/stack_init:
           stack: $env
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
-          secrets_provider: $profile
       - pulumi/update:
           stack: $env
           working_directory: ~/Data-Ingestion-Project/aws_infrastructure
