--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,14 @@ orbs:
   pulumi: pulumi/pulumi@2.1.0
   aws-cli: circleci/aws-cli@3.1.1
 jobs:
+  aws-cli-example:
+    steps:
+      - checkout
+      - aws-cli/setup:
+          aws-access-key-id: $accessId
+          aws-region: $region
+          aws-secret-access-key: $secret
+          profile-name: default
   build:
     docker: 
       - image: cimg/node:16.15.0
