--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,13 @@ jobs:
       - checkout:
           path: ~/Data-Ingestion-Project
       - aws-cli/setup:
-            aws-access-key-id: $accessId
-            aws-region: $region
-            aws-secret-access-key: $secret
+            aws-access-key-id: accessId
+            aws-region: region
+            aws-secret-access-key: secret
             profile-name: default
       - pulumi/login:
           access-token: $pulumi_access_token
       - run: | 
-          export AWS_ACCESS_KEY_ID=$accessId
-          export AWS_SECRET_ACCESS_KEY=$secret
           npm install
           npm install pulumi
       - pulumi/update:
